--- a/battle-of-hong-kong/src/pages/Main.scss
+++ b/battle-of-hong-kong/src/pages/Main.scss
@@ -92,3 +92,74 @@ h1 {
   box-shadow: 0 0 0 0px black;
   margin-bottom: 10px;
 }
+
+.nav-wrapper {
+    position: fixed;
+    top: 0; left: 0;
+}
+
+
+.container-map {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+
+  
+
+}
+
+.item-map-left {
+  position: sticky;
+  top:25vh;
+  flex: 1;
+  
+}
+
+.item-map-right {
+  flex: 1;
+  overflow: auto;
+
+}
+
+.container-map > div {
+  // flex: 40%; /* or - flex: 0 50% - or - flex-basis: 50% - */
+  /*demo*/
+  margin: 5%;
+  box-shadow: 0 0 0 0px black;
+}
+
+
+
+
+
+.flexcontainer {
+  display: flex;
+  flex-direction: row;
+  min-height: 100%;
+  align-items: stretch;
+}
+.flexitem {
+  display: flex;
+}
+#canvas-left {
+  background: yellow;
+  order: -1;
+  flex: 0 0 57px;
+}
+#content {
+  background: green;
+  order: 1;
+  padding: 1rem;
+}
+#content p {
+  display: block;
+}
+#canvas-right{
+  background: blue;
+  order: 2;
+  flex: 0 0 57px;
+}
+.fixed {
+  position: fixed;
+  width: 57px;
+}
